# tetrika_interview

./: pyproject.toml
task1/: solution.py  tests.py
task2/: beasts.csv  solution.py  solution_1.py  test.json  titles.json
task2/tests/: test_fetch_page.py
task3/: solution.py  task3.md
